# pyfdm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
scripts/: advection_diffusion.py  burgers_diffusion.py  cauchy.py  coupled_parabolic.py  implicit_heat.py  lax_wendroff_analysis.py  linear_advection.py  numerical_viscosity.py  recalculation_heat.py  sigma_heat.py  vector_transport.py  wave_task12.py  wave_task13.py
src/advection_diffusion_solver/: analysis.py  app.py  config.py  initial_conditions.py  schemes.py  solver.py  visualization.py
src/burgers_diffusion_solver/: analysis.py  app.py  config.py  initial_conditions.py  schemes.py  solver.py  time_step.py  visualization.py
src/cauchy_solver/: app.py  config.py  physics.py  schemes.py  solver.py  visualization.py
src/coupled_parabolic_solver/: analysis.py  app.py  config.py  datasets.py  linear_system.py  part_a_fourier.py  part_a_implicit.py  part_b_implicit.py  visualization.py
src/implicit_heat_solver/: analysis.py  app.py  config.py  initial_conditions.py  linear_system.py  solver.py  visualization.py
src/lax_wendroff_analysis/: analysis.py  app.py  config.py  derivation.py  initial_conditions.py  schemes.py  solver.py  visualization.py  von_neumann.py
src/linear_advection_solver/: analysis.py  app.py  config.py  exact.py  schemes.py  (+3 more)
tests/: perf_tdma_signal.py  test_cauchy_properties.py  test_cauchy_solver.py  test_implicit_heat_properties.py  test_tridiagonal_solver.py  test_vector_transport.py  test_wave_convergence.py  test_wave_task12.py
(+48 files in other folders)
